Fix about-us element's width, hide horizontal scroll

--- a/Frontend/its-bmstu/src/app/pages/about-us/about-us.component.scss
+++ b/Frontend/its-bmstu/src/app/pages/about-us/about-us.component.scss
@@ -1,21 +1,24 @@
 @import '../../../styles/colors.scss';
 @import '../../../styles/fonts.scss';
 
-.about-us {
-    height: 100%;
-}
-
 div {
     background-color: #14104B;
 }
 
+.row {
+    margin: 0px;
+}
+
+.about-us {
+    position: relative;
+}
+
 .title {
-    padding-top: 100px;
+    padding-top: 5%;
     font-family: 'Montserrat';
     font-style: normal;
     font-weight: 700;
-    font-size: 140px;
-    line-height: 171px;
+    font-size: 7vw;
     text-align: center;
     text-transform: uppercase;
     color: #FFFFFF;
@@ -23,9 +26,9 @@ div {
 }
 
 .text-block {
-    margin-top: 100px;
-    margin-left: 150px;
-    margin-bottom: 300px;
+    margin-top: 5%;
+    margin-left: 10%;
+    padding-bottom: 30vh;
     font-family: 'Montserrat';
 }
 
@@ -33,29 +36,28 @@ div {
     font-family: 'Montserrat';
     font-style: normal;
     font-weight: 400;
-    font-size: 29px;
-    line-height: 35px;
+    font-size: 1.5vw;
     color: #FFFFFF;
 }
 
 .button-block {
-    margin-left: 200px;
-    margin-top: 200px;
+    margin-left: 10%;
+    margin-top: 11%;
 }
 
 .button {
     border: 0em;
-    background-color: #cfcfcf;
-    margin-bottom: 55px;
-    width: 762px;
-    height: 100px;
+    background-color: #CBD4F3;
+    margin-bottom: 10%;
+    width: 40vw;
+    height: 10vh;
     border-radius: 30px;
-    font-size: 29px;
+    font-size: 1.5vw;
     font-weight: bold;
     font-family: "Montserrat";
     text-align: left;
-    padding-left: 30px;
-    transition: 1s;
+    padding-left: 2vw;
+    transition: 0.2s ease-in-out;
 }
 
 button:hover {
